# dgen-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NUMA_IMPLEMENTATION_HANDOFF.md  PROJECT_SUMMARY.md  README.md  build_pyo3.sh  install_wheel.sh  pyproject.toml  test_chunk_sizes.py
.github/workflows/: ci.yml  publish-pypi.yml
benches/: streaming_throughput.rs
docs/: ARCHITECTURE.md  BENCHMARK_RESULTS_V0.1.3.md  BENCHMARK_RESULTS_V0.1.5.md  CACHE_OPTIMIZATION_STRATEGY.md  CPU_NUMA_CONTROL.md  DEVELOPMENT.md  NUMA_IMPLEMENTATION.md  PARALLEL_STREAMING_IMPLEMENTATION.md  PERFORMANCE.md  PERFORMANCE_SCALING.md  PUBLISHING.md  ZERO_COPY_OPTIMIZATION_FINAL.md
examples/: NUMA_BENCHMARK_README.md  cpu_control.rs  numa_test.rs  perf_test_streaming.rs  streaming_benchmark.rs  streaming_write.rs
python/dgen_py/: __init__.py  __init__.pyi
python/dgen_py/docs/: PERFORMANCE.md
python/dgen_py/examples/: README.md  benchmark_cpu_numa.py  demo.py
python/examples/: Bench_dgen-py_vs_Numpy.py  Benchmark_NUMA_Multiprocess.py  Benchmark_dgen-py.py  Benchmark_dgen-py_FIXED.py  PERFORMANCE_GUIDE.md  README.md  STORAGE_BENCHMARK.md  STREAMING_PERFORMANCE_ISSUE.md  TEST_RESULTS.md  benchmark_cpu_numa.py  benchmark_numa_multiprocess_FIXED.py  benchmark_numa_multiprocess_v2.py  benchmark_vs_numpy.py  demo.py  iouring_benchmark.py  quick_perf_test.py  single_buffer_benchmark.py  storage_benchmark.py  test_numa_fix.py  test_parallel_streaming.py  test_seed_reproducibility.py  test_set_seed_method.py  zero_copy_demo.py
python/tests/: test_basic.py  test_zero_copy_verification.py
scripts/: setup_github_repo.sh
src/: constants.rs  generator.rs  lib.rs  numa.rs  python_api.rs
